# telemetry-api

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
examples/: demo.py
helm/telemetry-api/: Chart.yaml  values.yaml
helm/telemetry-api/templates/: deployment.yaml
k8s/: deployment.yaml  service.yaml
monitoring/: grafana.yaml  prometheus.yaml
src/telemetry_api/: __init__.py  app.py  config.py  crud.py  db.py  models.py  schemas.py
terraform/: main.tf
tests/: conftest.py  test_alerts.py  test_ingest.py  test_query.py  test_stats_auth.py
