[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-api"
version = "0.1.0"
description = "A small FastAPI service for ingesting and querying sensor telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["fastapi>=0.110", "uvicorn>=0.27", "sqlalchemy>=2.0", "prometheus-fastapi-instrumentator>=7.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
